emoji on IOS fix

--- a/css/webApp.css
+++ b/css/webApp.css
@@ -205,6 +205,7 @@ ul {
   
 /* toggler */
 .toggler::before {
+	font-family: monospace;
     content: "\25B6";
     display: inline-block;
     margin-right: 0.5rem;
